Do not throw if package name is empty for --add-reads